# PublicSpeakingAvatar

./: .gitignore
backend/: Pipfile  pyproject.toml  verify_tts.py  verify_tts_v2.py
backend/assets/pose/: pose_interpretation.jsonl
backend/docs/: heuristics.md
backend/models/: .gitignore
backend/scripts/: download_models.py  install_rhubarb.py  pose_interpreter.py  test_asr.py
backend/src/: main.py
backend/src/api/: websocket.py
backend/src/core/: config.py  feedback_messages.json  logging.py
backend/src/schemas/: audio_metrics.py  protocol.py
backend/src/services/: audio_engine.py  live_analyzer.py  llm_coach.py  parakeet_asr.py  rhubarb_service.py  session_manager.py
backend/src/services/analyzers/: interpreter.py  pose_interpreter.py  prosody.py  realtime_metrics.py  summarizer.py  transcriber.py
backend/src/services/synthesizers/: elevenlabs.py  kokoro.py
backend/src/services/synthesizers/kokoro_engine/: engine.py  phonemizer.py
backend/src/utils/: mel_spectrogram.py
